--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,18 +3,12 @@ owner: pfletche # Your GitHub organization or username, where this repository li
 repo: da-web-uptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
   - name: DA Website
     url: https://droneamplified.com
-  - name: DA Dev Site
+  - name: DA Dev Site (lightsail)
     url: https://droneamplified-dev.com
+  - name: DA Production Site (lightsail)
+    url: http://18.188.61.126 
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
