--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -9,8 +9,8 @@ sites:
     url: https://droneamplified-dev.com
   - name: DA New Website (lightsail)
     url: http://3.133.149.189/
-  - name: D.A. Guide
-    url: https://guide.droneamplified.com/
+  #- name: D.A. Guide
+  #  url: https://guide.droneamplified.com/
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
