--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,7 +3,7 @@ owner: pfletche # Your GitHub organization or username, where this repository li
 repo: da-web-uptime # The name of this repository
 
 sites:
-  - name: DA Website (lightdail)
+  - name: DA Website (lightsail)
     url: https://droneamplified.com
   - name: DA Dev Site (lightsail)
     url: https://droneamplified-dev.com
